[gd_scene load_steps=15 format=2]

[ext_resource path="res://door.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://level1_player.png" type="Texture" id=3]
[ext_resource path="res://Win.gd" type="Script" id=4]
[ext_resource path="res://arial.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://nav_green_tileset.tres" type="TileSet" id=6]
[ext_resource path="res://pixilart-drawing (1).png" type="Texture" id=7]
[ext_resource path="res://Area2D.gd" type="Script" id=8]
[ext_resource path="res://World.gd" type="Script" id=9]
[ext_resource path="res://Navigation2D.gd" type="Script" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11, 13 )

[sub_resource type="CircleShape2D" id=2]
radius = 6.0

[sub_resource type="DynamicFont" id=3]
size = 100
font_data = ExtResource( 5 )

[sub_resource type="CircleShape2D" id=4]
radius = 56.2228

[node name="World" type="Node2D"]
script = ExtResource( 9 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( -318, 319 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Player"]
position = Vector2( 34, 4 )
scale = Vector2( 0.06, 0.06 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 33, 3.5 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 11, 28 )
current = true
zoom = Vector2( 0.678, 0.678 )
smoothing_enabled = true

[node name="Navigation2D" type="Navigation2D" parent="."]
script = ExtResource( 10 )

[node name="NavTileMap" type="TileMap" parent="Navigation2D"]
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -1310741, 0, 0, -1310740, 0, 0, -1310739, 0, 0, -1310738, 0, 0, -1310737, 0, 0, -1310736, 0, 0, -1310735, 0, 0, -1310734, 0, 0, -1310733, 0, 0, -1310732, 0, 0, -1310731, 0, 0, -1310730, 0, 0, -1310729, 0, 0, -1310728, 0, 0, -1310727, 0, 0, -1310726, 0, 0, -1310725, 0, 0, -1310724, 0, 0, -1310723, 0, 0, -1310722, 0, 0, -1310721, 0, 0, -1376256, 0, 0, -1376255, 0, 0, -1376254, 0, 0, -1376253, 0, 0, -1376252, 0, 0, -1376251, 0, 0, -1376250, 0, 0, -1376249, 0, 0, -1376248, 0, 0, -1376247, 0, 0, -1376246, 0, 0, -1376245, 0, 0, -1376244, 0, 0, -1376243, 0, 0, -1376242, 0, 0, -1376241, 0, 0, -1376240, 0, 0, -1376239, 0, 0, -1376238, 0, 0, -1376237, 0, 0, -1376236, 0, 0, -1245205, 0, 0, -1310700, 0, 0, -1179669, 0, 0, -1245164, 0, 0, -1114133, 0, 0, -1179628, 0, 0, -1048597, 0, 0, -1114092, 0, 0, -983061, 0, 0, -1048556, 0, 0, -917525, 0, 0, -983020, 0, 0, -851989, 0, 0, -851988, 0, 0, -851987, 0, 0, -851986, 0, 0, -851985, 0, 0, -851984, 0, 0, -851983, 0, 0, -917484, 0, 0, -786453, 0, 0, -851948, 0, 0, -720917, 0, 0, -786412, 0, 0, -655381, 0, 0, -720876, 0, 0, -589845, 0, 0, -655340, 0, 0, -524309, 0, 0, -589804, 0, 0, -458773, 0, 0, -524268, 0, 0, -393237, 0, 0, -458732, 0, 0, -327701, 0, 0, -393196, 0, 0, -262165, 0, 0, -327660, 0, 0, -196629, 0, 0, -262124, 0, 0, -131093, 0, 0, -196588, 0, 0, -65557, 0, 0, -131052, 0, 0, -21, 0, 0, -4, 0, 0, -3, 0, 0, -2, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65516, 0, 0, 65515, 0, 0, 65516, 0, 0, 65517, 0, 0, 65518, 0, 0, 65519, 0, 0, 65520, 0, 0, 65521, 0, 0, 65522, 0, 0, 65523, 0, 0, 65524, 0, 0, 65525, 0, 0, 65526, 0, 0, 65527, 0, 0, 65528, 0, 0, 65529, 0, 0, 65530, 0, 0, 65531, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 131051, 0, 0, 65556, 0, 0, 196587, 0, 0, 131092, 0, 0, 262123, 0, 0, 196628, 0, 0, 327659, 0, 0, 262164, 0, 0, 393195, 0, 0, 327700, 0, 0, 458731, 0, 0, 393236, 0, 0, 524267, 0, 0, 458772, 0, 0, 589803, 0, 0, 524308, 0, 0, 655339, 0, 0, 655344, 0, 0, 655345, 0, 0, 655346, 0, 0, 655347, 0, 0, 655348, 0, 0, 655349, 0, 0, 655350, 0, 0, 655351, 0, 0, 655352, 0, 0, 655353, 0, 0, 655354, 0, 0, 655355, 0, 0, 655356, 0, 0, 655357, 0, 0, 655358, 0, 0, 655359, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 720875, 0, 0, 655380, 0, 0, 786411, 0, 0, 786412, 0, 0, 786413, 0, 0, 720916, 0, 0, 851947, 0, 0, 851948, 0, 0, 851949, 0, 0, 786452, 0, 0, 917483, 0, 0, 917484, 0, 0, 917485, 0, 0, 917486, 0, 0, 917487, 0, 0, 917488, 0, 0, 917495, 0, 0, 917496, 0, 0, 917497, 0, 0, 917498, 0, 0, 851988, 0, 0, 983019, 0, 0, 983020, 0, 0, 983021, 0, 0, 983022, 0, 0, 983023, 0, 0, 983024, 0, 0, 983030, 0, 0, 983031, 0, 0, 983032, 0, 0, 983033, 0, 0, 983034, 0, 0, 917524, 0, 0, 1048555, 0, 0, 1048556, 0, 0, 1048557, 0, 0, 1048558, 0, 0, 1048559, 0, 0, 1048560, 0, 0, 1048565, 0, 0, 1048566, 0, 0, 1048567, 0, 0, 1048568, 0, 0, 1048569, 0, 0, 1048570, 0, 0, 983040, 0, 0, 983041, 0, 0, 983042, 0, 0, 983043, 0, 0, 983044, 0, 0, 983060, 0, 0, 1114091, 0, 0, 1114092, 0, 0, 1114093, 0, 0, 1114094, 0, 0, 1114095, 0, 0, 1114096, 0, 0, 1114100, 0, 0, 1114101, 0, 0, 1114102, 0, 0, 1114103, 0, 0, 1114104, 0, 0, 1114105, 0, 0, 1114106, 0, 0, 1114107, 0, 0, 1114108, 0, 0, 1114109, 0, 0, 1114110, 0, 0, 1114111, 0, 0, 1048576, 0, 0, 1048577, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048596, 0, 0, 1179627, 0, 0, 1179628, 0, 0, 1179629, 0, 0, 1179630, 0, 0, 1179631, 0, 0, 1179632, 0, 0, 1179633, 0, 0, 1179634, 0, 0, 1179635, 0, 0, 1179636, 0, 0, 1179637, 0, 0, 1179638, 0, 0, 1179639, 0, 0, 1179640, 0, 0, 1179641, 0, 0, 1179642, 0, 0, 1179643, 0, 0, 1179644, 0, 0, 1179645, 0, 0, 1179646, 0, 0, 1179647, 0, 0, 1114112, 0, 0, 1114113, 0, 0, 1114114, 0, 0, 1114115, 0, 0, 1114116, 0, 0, 1114117, 0, 0, 1114118, 0, 0, 1114119, 0, 0, 1114120, 0, 0, 1114121, 0, 0, 1114122, 0, 0, 1114123, 0, 0, 1114124, 0, 0, 1114125, 0, 0, 1114126, 0, 0, 1114132, 0, 0, 1245163, 0, 0, 1179668, 0, 0, 1310699, 0, 0, 1245201, 0, 0, 1245202, 0, 0, 1245203, 0, 0, 1245204, 0, 0, 1376235, 0, 0, 1376244, 0, 0, 1376245, 0, 0, 1310740, 0, 0, 1441771, 0, 0, 1441772, 0, 0, 1441773, 0, 0, 1441774, 0, 0, 1441775, 0, 0, 1441776, 0, 0, 1441777, 0, 0, 1441778, 0, 0, 1441779, 0, 0, 1441780, 0, 0, 1441781, 0, 0, 1441782, 0, 0, 1441783, 0, 0, 1441784, 0, 0, 1441785, 0, 0, 1441786, 0, 0, 1441787, 0, 0, 1441788, 0, 0, 1441789, 0, 0, 1441790, 0, 0, 1441791, 0, 0, 1376256, 0, 0, 1376257, 0, 0, 1376258, 0, 0, 1376259, 0, 0, 1376260, 0, 0, 1376261, 0, 0, 1376262, 0, 0, 1376263, 0, 0, 1376264, 0, 0, 1376265, 0, 0, 1376266, 0, 0, 1376267, 0, 0, 1376268, 0, 0, 1376269, 0, 0, 1376270, 0, 0, 1376271, 0, 0, 1376272, 0, 0, 1376273, 0, 0, 1376274, 0, 0, 1376275, 0, 0, 1376276, 0, 0 )

[node name="coin" type="Area2D" parent="." groups=["coin_group"]]
position = Vector2( 257, 336 )
script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="coin"]
position = Vector2( -33, -18 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="coin"]
position = Vector2( -33, -20 )
shape = SubResource( 2 )

[node name="coin2" type="Area2D" parent="." groups=["coin_group"]]
position = Vector2( 138, 280 )
script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="coin2"]
position = Vector2( -33, -18 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="coin2"]
position = Vector2( -33, -20 )
shape = SubResource( 2 )

[node name="coin3" type="Area2D" parent="." groups=["coin_group"]]
position = Vector2( -181, 281 )
script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="coin3"]
position = Vector2( -33, -18 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="coin3"]
position = Vector2( -33, -20 )
shape = SubResource( 2 )

[node name="coin4" type="Area2D" parent="." groups=["coin_group"]]
position = Vector2( -271, 184 )
script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="coin4"]
position = Vector2( -33, -18 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="coin4"]
position = Vector2( -33, -20 )
shape = SubResource( 2 )

[node name="coin5" type="Area2D" parent="." groups=["coin_group"]]
position = Vector2( -35, 152 )
script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="coin5"]
position = Vector2( -33, -18 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="coin5"]
position = Vector2( -33, -20 )
shape = SubResource( 2 )

[node name="Win" type="RichTextLabel" parent="."]
margin_left = -184.0
margin_top = -166.0
margin_right = 337.0
margin_bottom = 341.0
custom_fonts/normal_font = SubResource( 3 )
scroll_active = false
script = ExtResource( 4 )

[node name="door" type="Area2D" parent="."]
position = Vector2( 19, -181 )

[node name="Sprite" type="Sprite" parent="door"]
position = Vector2( 259, 285 )
scale = Vector2( 0.199167, 0.168333 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="door"]
position = Vector2( 259, 278 )
shape = SubResource( 4 )

[connection signal="body_entered" from="coin" to="Player" method="_on_coin_body_entered"]
[connection signal="body_entered" from="coin" to="coin" method="_on_coin_body_entered"]
[connection signal="body_exited" from="coin" to="coin" method="_on_coin_body_exited"]
[connection signal="body_entered" from="coin2" to="Player" method="_on_coin_body_entered"]
[connection signal="body_entered" from="coin2" to="coin2" method="_on_coin_body_entered"]
[connection signal="body_exited" from="coin2" to="coin2" method="_on_coin_body_exited"]
[connection signal="body_entered" from="coin3" to="Player" method="_on_coin_body_entered"]
[connection signal="body_entered" from="coin3" to="coin3" method="_on_coin_body_entered"]
[connection signal="body_exited" from="coin3" to="coin3" method="_on_coin_body_exited"]
[connection signal="body_entered" from="coin4" to="Player" method="_on_coin_body_entered"]
[connection signal="body_entered" from="coin4" to="coin4" method="_on_coin_body_entered"]
[connection signal="body_exited" from="coin4" to="coin4" method="_on_coin_body_exited"]
[connection signal="body_entered" from="coin5" to="Player" method="_on_coin_body_entered"]
[connection signal="body_entered" from="coin5" to="coin5" method="_on_coin_body_entered"]
[connection signal="body_exited" from="coin5" to="coin5" method="_on_coin_body_exited"]
[connection signal="body_entered" from="door" to="Player" method="_on_door_body_entered"]
[connection signal="body_entered" from="door" to="coin" method="_on_door_body_entered"]
